# quintal-do-espeto

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  quintaldoespeto.txt  requirements.txt
core/: admin.py  apps.py  models.py
core/migrations/: 0001_initial.py  0002_item_order_delete_menu.py  0003_alter_item_options.py  0004_item_created_at_item_updated_at_order_created_at_and_more.py  0005_remove_order_item_itemorder.py  0006_alter_order_table.py  0007_alter_itemorder_options_alter_itemorder_amount_and_more.py  0008_order_availability_order_cliente_and_more.py  0009_rename_cliente_order_client.py  0010_order_account_closing_time.py  0011_table_alter_order_availability.py  0012_remove_order_table_order__table.py  0013_alter_item_options_remove_order__table_order__table.py  0014_alter_item_options_remove_order_availability.py  0015_remove_order__table_and_more.py  0016_order_created_by.py
quintal_do_espeto/: asgi.py  settings.py  urls.py  wsgi.py
