[tool.poetry]
name = "espetinho"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe <felipekjs36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
django-jet = "^1.0.8"
django-admin-honeypot = "^1.1.0"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
uvicorn = "^0.30.1"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
